k8s/platform/headlamp/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Headlamp
    gethomepage.dev/description: Kubernetes cluster management
    gethomepage.dev/group: Operations
    gethomepage.dev/icon: headlamp.png
    gethomepage.dev/href: http://headlamp.sfl
    gethomepage.dev/siteMonitor: http://headlamp.sfl
    gethomepage.dev/external: "true"
    gethomepage.dev/weight: "20"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`headlamp.sfl`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
